// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArticleRenderer /> should render a post's content 1`] = `
<div>
  <div>
    <style
      dangerouslySetInnerHTML={
        {
          "__html": "

ul.nesting-level-1 {
  list-style-type: disc; 
}
ul.nesting-level-2 {
  list-style-type: circle; 
}
ul.nesting-level-3 {
  list-style-type: square; 
}
ul.nesting-level-4 {
  list-style-type: disc; 
}
ul.nesting-level-5 {
  list-style-type: circle; 
}
ul.nesting-level-6 {
  list-style-type: square; 
}
ul.nesting-level-7 {
  list-style-type: disc; 
}
ul.nesting-level-8 {
  list-style-type: circle; 
}


ol[list-style-type="decimal"] {
  list-style-type: decimal;
}
ol[list-style-type="lower-alpha"] {
  list-style-type: lower-alpha;
}
ol[list-style-type="lower-roman"] { 
  list-style-type: lower-roman;
}

",
        }
      }
    />
    <h1
      className="heading-1"
      id="h.yga84kcidt1h"
    >
      <span
        className=""
      >
        <span
          className=""
        >
          This is a title, there are many like it, but this one is mine
        </span>
      </span>
    </h1>
    <h1
      className="heading-1"
      id="h.s3bvibj9h0dt"
    >
      <span
        className=""
      >
        <span
          className=""
        >
          This is h1
        </span>
      </span>
    </h1>
    <h2
      className="heading-2"
      id="h.um9b1oy1kxok"
    >
      <span
        className=""
      >
        This is h2
      </span>
    </h2>
    <h3
      className="heading-3"
      id="h.h31ko2mh0gun"
    >
      <span
        className=""
      >
        This is h3
      </span>
    </h3>
    <h4
      className="heading-4"
      id="h.wnhfn1n79rxt"
    >
      <span
        className=""
      >
        This is h4
      </span>
    </h4>
    <h5
      className="heading-5"
      id="h.xvp9ub5kkns"
    >
      <span
        className=""
      >
        This is h5
      </span>
    </h5>
    <h6
      className="heading-6"
      id="h.gpqs2vw2rytx"
    >
      <span
        className=""
      >
        This is h6
      </span>
    </h6>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    />
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <strong
        className=""
      >
        <span
          className=""
        >
          This is bold
        </span>
      </strong>
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <i
        className=""
      >
        <span
          className=""
        >
          This is italic
        </span>
      </i>
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <u
        className=""
      >
        <span
          className=""
        >
          This is underlined
        </span>
      </u>
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <u
        className=""
      />
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <sup
        className=""
      >
        <span
          className=""
        >
          aaa
        </span>
      </sup>
      <u
        className=""
      >
        <s
          className=""
        >
          <i
            className=""
          >
            <strong
              className=""
            >
              <sup
                className=""
              >
                <span
                  className=""
                >
                  This is bold, underlined, italic, strikethrough and supertext
                </span>
              </sup>
            </strong>
          </i>
        </s>
      </u>
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <sub
        className=""
      >
        <span
          className=""
        >
          eee
        </span>
      </sub>
      <u
        className=""
      >
        <s
          className=""
        >
          <i
            className=""
          >
            <strong
              className=""
            >
              <sub
                className=""
              >
                <span
                  className=""
                >
                  This is bold, underlined, italic, strikethrough and subscript
                </span>
              </sub>
            </strong>
          </i>
        </s>
      </u>
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <s
        className=""
      >
        <sub
          className=""
        />
      </s>
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <sub
        className=""
      >
        <span
          className=""
        >
          horizontal line below:
        </span>
      </sub>
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <s
        className=""
      >
        <sub
          className=""
        />
      </s>
    </p>
    <hr
      className=""
    />
    <s
      className=""
    >
      <sub
        className=""
      />
    </s>
    <p
      className=""
      style={
        {
          "margin": "0",
        }
      }
    />
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    />
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <span
        className=""
      >
        x
      </span>
      <sup
        className=""
      >
        <span
          className=""
        >
          3
        </span>
      </sup>
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <sup
        className=""
      />
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <sup
        className=""
      >
        <span
          className=""
        >
          H
        </span>
      </sup>
      <sub
        className=""
      >
        <span
          className=""
        >
          2
        </span>
      </sub>
      <sup
        className=""
      >
        <span
          className=""
        >
          O x
        </span>
      </sup>
      <strong
        className=""
      >
        <sup
          className=""
        >
          <span
            className=""
          >
            o
          </span>
        </sup>
      </strong>
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    />
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <sub
        className=""
      >
        <span
          className=""
        >
          Unordered “bullet point” list
        </span>
      </sub>
    </p>
    <ul
      className="nesting-level-1"
    >
      <li
        className=""
      >
        <sub
          className=""
        >
          <span
            className=""
          >
            Apple
          </span>
        </sub>
      </li>
      <li
        className=""
      >
        <sub
          className=""
        >
          <span
            className=""
          >
            Pineapple
          </span>
        </sub>
      </li>
      <li
        className=""
      >
        <sub
          className=""
        >
          <span
            className=""
          >
            Pen 
          </span>
        </sub>
        <strong
          className=""
        >
          <sub
            className=""
          >
            <span
              className=""
            >
              pineapple
            </span>
          </sub>
        </strong>
        <sub
          className=""
        >
          <span
            className=""
          >
             
          </span>
        </sub>
        <i
          className=""
        >
          <sub
            className=""
          >
            <span
              className=""
            >
              apple
            </span>
          </sub>
        </i>
        <sub
          className=""
        >
          <span
            className=""
          >
             
          </span>
        </sub>
        <u
          className=""
        >
          <sub
            className=""
          >
            <span
              className=""
            >
              pen
            </span>
          </sub>
        </u>
      </li>
    </ul>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <u
        className=""
      >
        <sub
          className=""
        />
      </u>
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <sub
        className=""
      >
        <span
          className=""
        >
          Unordered list with different symbols
        </span>
      </sub>
    </p>
    <ul
      className="nesting-level-1"
    >
      <li
        className=""
      >
        <sub
          className=""
        >
          <span
            className=""
          >
            Duck
          </span>
        </sub>
      </li>
      <li
        className=""
      >
        <sub
          className=""
        >
          <span
            className=""
          >
            Duck2
          </span>
        </sub>
      </li>
      <li
        className=""
      >
        <sub
          className=""
        >
          <span
            className=""
          >
            Goose
          </span>
        </sub>
      </li>
    </ul>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <sub
        className=""
      />
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <sub
        className=""
      >
        <span
          className=""
        >
          Todo list with checkmarks
        </span>
      </sub>
    </p>
    <ul
      className="nesting-level-1"
    >
      <li
        className=""
      >
        <sub
          className=""
        >
          <span
            className=""
          >
            Veni
          </span>
        </sub>
      </li>
      <li
        className=""
      >
        <sub
          className=""
        >
          <span
            className=""
          >
            Vidi
          </span>
        </sub>
      </li>
      <li
        className=""
      >
        <sub
          className=""
        >
          <span
            className=""
          >
            Vici
          </span>
        </sub>
      </li>
    </ul>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <u
        className=""
      >
        <sub
          className=""
        />
      </u>
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <sub
        className=""
      >
        <span
          className=""
        >
          Ordered “numbered” list
        </span>
      </sub>
    </p>
    <ol
      className="nesting-level-1"
      list-style-type="decimal"
    >
      <li
        className=""
      >
        <sub
          className=""
        >
          <span
            className=""
          >
            Waking in the morning
          </span>
        </sub>
      </li>
      <li
        className=""
      >
        <sub
          className=""
        >
          <span
            className=""
          >
            Gotta go downstairs
          </span>
        </sub>
      </li>
      <li
        className=""
      >
        <sub
          className=""
        >
          <span
            className=""
          >
            Gotta have cereal
          </span>
        </sub>
      </li>
      <li
        className=""
      >
        <sub
          className=""
        >
          <span
            className=""
          >
            I see my friends
          </span>
        </sub>
      </li>
      <li
        className=""
      >
        <sub
          className=""
        >
          <span
            className=""
          >
            Gotta get down on Friday
          </span>
        </sub>
      </li>
    </ol>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <sub
        className=""
      />
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <sub
        className=""
      >
        <img
          className=""
          style={
            {
              "height": "492.26625px",
              "maxWidth": "none",
              "width": "328.1775px",
            }
          }
        />
      </sub>
      <sub
        className=""
      />
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <sub
        className=""
      />
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <strong
        className=""
      >
        <sub
          className=""
        >
          <span
            className=""
          >
            A wild table appears
          </span>
        </sub>
      </strong>
    </p>
    <table
      className=""
    >
      <tbody
        className=""
      >
        <tr
          className=""
        >
          <td
            className=""
            style={
              {
                "paddingBottom": "5PT",
                "paddingLeft": "5PT",
                "paddingRight": "5PT",
                "paddingTop": "5PT",
                "verticalAlign": "top",
              }
            }
          >
            <p
              className="normal-text"
              style={
                {
                  "margin": "0",
                }
              }
            >
              <sub
                className=""
              >
                <span
                  className=""
                >
                  Merged cols 1 & 2
                </span>
              </sub>
            </p>
          </td>
          <td
            className=""
            style={
              {
                "paddingBottom": "5PT",
                "paddingLeft": "5PT",
                "paddingRight": "5PT",
                "paddingTop": "5PT",
                "verticalAlign": "top",
              }
            }
          >
            <p
              className="normal-text"
              style={
                {
                  "margin": "0",
                }
              }
            >
              <sub
                className=""
              />
            </p>
          </td>
          <td
            className=""
            style={
              {
                "paddingBottom": "5PT",
                "paddingLeft": "5PT",
                "paddingRight": "5PT",
                "paddingTop": "5PT",
                "verticalAlign": "top",
              }
            }
          >
            <p
              className="normal-text"
              style={
                {
                  "margin": "0",
                }
              }
            >
              <sub
                className=""
              >
                <span
                  className=""
                >
                  Col 3
                </span>
              </sub>
            </p>
          </td>
          <td
            className=""
            style={
              {
                "paddingBottom": "5PT",
                "paddingLeft": "5PT",
                "paddingRight": "5PT",
                "paddingTop": "5PT",
                "verticalAlign": "top",
              }
            }
          >
            <p
              className="normal-text"
              style={
                {
                  "margin": "0",
                }
              }
            >
              <sub
                className=""
              >
                <span
                  className=""
                >
                  Col 4
                </span>
              </sub>
            </p>
          </td>
        </tr>
        <tr
          className=""
        >
          <td
            className=""
            style={
              {
                "paddingBottom": "5PT",
                "paddingLeft": "5PT",
                "paddingRight": "5PT",
                "paddingTop": "5PT",
                "verticalAlign": "top",
              }
            }
          >
            <p
              className="normal-text"
              style={
                {
                  "margin": "0",
                }
              }
            >
              <sub
                className=""
              >
                <span
                  className=""
                >
                  A
                </span>
              </sub>
            </p>
          </td>
          <td
            className=""
            style={
              {
                "paddingBottom": "5PT",
                "paddingLeft": "5PT",
                "paddingRight": "5PT",
                "paddingTop": "5PT",
                "verticalAlign": "top",
              }
            }
          >
            <p
              className="normal-text"
              style={
                {
                  "margin": "0",
                }
              }
            >
              <sub
                className=""
              >
                <span
                  className=""
                >
                  B
                </span>
              </sub>
            </p>
          </td>
          <td
            className=""
            style={
              {
                "paddingBottom": "5PT",
                "paddingLeft": "5PT",
                "paddingRight": "5PT",
                "paddingTop": "5PT",
                "verticalAlign": "top",
              }
            }
          >
            <p
              className="normal-text"
              style={
                {
                  "margin": "0",
                }
              }
            >
              <sub
                className=""
              >
                <span
                  className=""
                >
                  C
                </span>
              </sub>
            </p>
          </td>
          <td
            className=""
            style={
              {
                "paddingBottom": "5PT",
                "paddingLeft": "5PT",
                "paddingRight": "5PT",
                "paddingTop": "5PT",
                "verticalAlign": "top",
              }
            }
          >
            <p
              className="normal-text"
              style={
                {
                  "margin": "0",
                }
              }
            >
              <sub
                className=""
              >
                <span
                  className=""
                >
                  D
                </span>
              </sub>
            </p>
          </td>
        </tr>
        <tr
          className=""
        >
          <td
            className=""
            style={
              {
                "paddingBottom": "5PT",
                "paddingLeft": "5PT",
                "paddingRight": "5PT",
                "paddingTop": "5PT",
                "verticalAlign": "top",
              }
            }
          >
            <p
              className="normal-text"
              style={
                {
                  "margin": "0",
                }
              }
            >
              <sub
                className=""
              >
                <span
                  className=""
                >
                  ა
                </span>
              </sub>
            </p>
          </td>
          <td
            className=""
            style={
              {
                "paddingBottom": "5PT",
                "paddingLeft": "5PT",
                "paddingRight": "5PT",
                "paddingTop": "5PT",
                "verticalAlign": "top",
              }
            }
          >
            <p
              className="normal-text"
              style={
                {
                  "margin": "0",
                }
              }
            >
              <sub
                className=""
              >
                <span
                  className=""
                >
                  ბ
                </span>
              </sub>
            </p>
          </td>
          <td
            className=""
            style={
              {
                "paddingBottom": "5PT",
                "paddingLeft": "5PT",
                "paddingRight": "5PT",
                "paddingTop": "5PT",
                "verticalAlign": "top",
              }
            }
          >
            <p
              className="normal-text"
              style={
                {
                  "margin": "0",
                }
              }
            >
              <sub
                className=""
              >
                <span
                  className=""
                >
                  ს
                </span>
              </sub>
            </p>
          </td>
          <td
            className=""
            style={
              {
                "paddingBottom": "5PT",
                "paddingLeft": "5PT",
                "paddingRight": "5PT",
                "paddingTop": "5PT",
                "verticalAlign": "top",
              }
            }
          >
            <p
              className="normal-text"
              style={
                {
                  "margin": "0",
                }
              }
            >
              <sub
                className=""
              >
                <span
                  className=""
                >
                  დ
                </span>
              </sub>
            </p>
          </td>
        </tr>
      </tbody>
    </table>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <sub
        className=""
      />
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <sub
        className=""
      >
        <span
          className=""
        >
          Some more paragraphs after everything else.
        </span>
      </sub>
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    />
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    />
  </div>
</div>
`;

exports[`<ArticleRenderer /> should replace the CDN URL with the override (markdown) 1`] = `
<div>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vitae leo nec massa semper venenatis eu at felis. Nam consequat accumsan dictum. Suspendisse eu metus in justo eleifend consequat id quis nunc. Etiam pharetra, tortor id malesuada efficitur, ligula sem posuere erat, vitae placerat ipsum felis non leo. Praesent lobortis, mauris vel posuere bibendum, leo diam vehicula lacus, a interdum odio massa et elit. Suspendisse ac lorem imperdiet, suscipit quam eu, maximus elit. Quisque nec metus eu nibh iaculis dignissim. Cras ultricies pulvinar erat eget luctus. In id ipsum non diam sagittis ullamcorper eget nec arcu. Ut laoreet accumsan ex non porta. Donec vitae mi porttitor, dictum lacus sit amet, dapibus ipsum. Praesent bibendum lacus nibh, sed egestas enim facilisis vitae!
    <img
      alt=""
      src="https://cdn.example.com/loAWY0YB0HTHexSzw3Z1/djHVTYbPaCby44H5CxhH"
      title="just another dog"
    />
  </p>
  

  <p>
    Integer pretium bibendum ipsum, vehicula placerat orci finibus id. Proin orci mauris, ornare commodo congue sit amet, dignissim non eros. Nullam risus nibh, dictum et enim vel, vestibulum maximus velit. Proin eu porta risus. Aliquam nec lacus et lacus commodo elementum. Mauris quis massa ac urna iaculis hendrerit. Nulla eget ullamcorper lorem, in rutrum sapien. Vivamus finibus placerat massa a mollis.
  </p>
  

  <p>
    Cras vitae ultricies odio. Vestibulum iaculis interdum feugiat. Donec iaculis finibus lorem. Quisque lacinia volutpat magna, in dapibus lectus gravida id. Cras iaculis justo et diam elementum, nec rhoncus dolor efficitur. Sed lacus libero, lobortis in mauris ut, imperdiet suscipit quam. Sed eu leo vitae sapien vestibulum viverra.
  </p>
  

  <p>
    Morbi varius, velit volutpat auctor malesuada, nisi mi rhoncus urna, at tempus risus libero ac turpis. Nullam sit amet porta leo. Nam dapibus maximus ante, vitae fringilla ipsum lacinia posuere. Donec efficitur, odio ac blandit convallis, purus arcu posuere risus, maximus scelerisque quam augue id ante. Etiam ultrices neque in purus rhoncus laoreet. Nunc bibendum tincidunt felis, quis molestie libero dictum scelerisque. Sed urna dolor, elementum eget auctor tincidunt, lacinia in diam. Duis a libero tristique, luctus lacus aliquet, fermentum odio. Integer lacinia nunc metus, ac egestas nibh mattis a. Fusce sodales mollis odio non pulvinar. Nulla vitae dignissim nibh, ac finibus neque.
  </p>
  

  <p>
    Mauris mollis, lacus eu sodales tincidunt, ipsum ex pharetra libero, eu posuere ante lectus nec velit. Sed commodo ultrices diam eget pulvinar. Vestibulum volutpat sapien non nisl porttitor, sed euismod magna sollicitudin. Suspendisse potenti. Sed posuere sapien id magna euismod tincidunt. Phasellus in cursus diam, eget vestibulum ipsum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur tempus mollis tempus. Phasellus rhoncus, turpis sed mollis rutrum, tellus mauris hendrerit nulla, a congue dolor mauris in leo. Sed feugiat posuere neque, eget cursus est luctus at. Vestibulum accumsan convallis ante in auctor. Aliquam ac orci sem. Nunc auctor mauris sed felis tristique, nec malesuada ante porta.
  </p>
  

  <p>
    Sed et ligula nec nisl convallis volutpat. Curabitur semper massa ac mollis feugiat. Vestibulum eget orci ac arcu tempus dapibus. Nunc augue lorem, ultrices in velit non, porta cursus ex. Aenean eget nunc sit amet quam vulputate porttitor vitae sed ex. Morbi porttitor libero nec hendrerit vehicula. Ut maximus odio ac odio blandit pharetra. Etiam quis condimentum est. Morbi dui nisi, ornare at dignissim vel, ultrices rhoncus nisl. Sed at euismod enim. Quisque efficitur orci a velit pretium scelerisque. Nulla eleifend feugiat porta. Etiam eu rhoncus lectus.
    <img
      alt=""
      src="https://cdn.example.com/loAWY0YB0HTHexSzw3Z1/ZWJn6ilXOYs9oS9iDgMH"
      title="This is a title"
    />
  </p>
  

  <p>
    THIS PUPPY BREAKS UP TEXT Etiam maximus mauris eu felis interdum, in bibendum orci sodales. In posuere elit quam. Nulla dictum, sapien ut sagittis consequat, nisl elit suscipit lectus, a blandit risus nunc eget nunc. Donec augue ante, eleifend non risus at, dignissim gravida ipsum. Vivamus tristique tempor dui, at condimentum dui tristique nec. Suspendisse potenti. Nulla facilisi. Quisque orci risus, iaculis vel vehicula eu, cursus sit amet justo. Cras sed erat a est tristique elementum.
  </p>
  

  <p>
    Morbi justo lorem, ultricies ut volutpat aliquam, blandit eu erat. Duis accumsan egestas convallis. Morbi a finibus lectus. Vivamus vel ultrices felis. Donec faucibus placerat mi, non pellentesque est lacinia non. Ut vitae metus leo. Mauris volutpat malesuada lorem, et auctor metus sodales ultrices. Nulla rhoncus augue pulvinar consectetur bibendum. Nunc ac urna vel mauris venenatis euismod in et massa.
  </p>
  

  <p>
    Proin sed laoreet augue. Aliquam malesuada vel ex ut vestibulum. Mauris at libero vestibulum, vehicula mi nec, ullamcorper magna. Vivamus bibendum ipsum imperdiet placerat pharetra. Curabitur fermentum id est a tristique. Integer at semper erat. Phasellus volutpat dolor in ipsum hendrerit, eu maximus libero mattis. Nunc aliquam, tortor at congue vehicula, mi purus mollis metus, et convallis orci quam at elit.
    <img
      alt=""
      src="https://cdn.example.com/loAWY0YB0HTHexSzw3Z1/RoJOqZdOWPaxWCVnH9sD"
    />
  </p>
  

  <p>
    Etiam non eleifend nisl. Morbi eu libero a erat volutpat dictum eu sodales urna. Ut venenatis rutrum dolor, a euismod nibh egestas a. Nullam pretium congue tellus, eu tempor est consectetur et. Etiam dapibus consequat volutpat. Nunc sed bibendum ipsum, a egestas risus. Nulla id dolor nibh. Nulla tempor diam eget sapien elementum faucibus. Sed elementum, mi ut maximus facilisis, ex enim fringilla sem, at fermentum odio mi id diam. Pellentesque vitae commodo felis. Vestibulum eget diam pellentesque, porttitor ante a, ultricies lacus.
    <img
      alt=""
      src="https://cdn.example.com/loAWY0YB0HTHexSzw3Z1/RoJOqZdOWPaxWCVnH9sD"
    />
  </p>
  

  <p>
    <img
      alt=""
      src="https://cdn.example.com/loAWY0YB0HTHexSzw3Z1/RoJOqZdOWPaxWCVnH9sD"
    />
  </p>
  

  <p>
    <img
      alt=""
      src="https://cdn.example.com/loAWY0YB0HTHexSzw3Z1/RoJOqZdOWPaxWCVnH9sD"
      title="inline puppies"
    />
  </p>
</div>
`;

exports[`<ArticleRenderer /> should replace the CDN URL with the override (markdown) 2`] = `
<div>
  <p>
    Tab 1
  </p>
</div>
`;

exports[`<ArticleRenderer /> should replace the CDN URL with the override (markdown) 3`] = `
<div>
  <p>
    Tab 2
  </p>
</div>
`;

exports[`<ArticleRenderer /> should replace the CDN URL with the override (tree) 1`] = `
<div>
  <div>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
          "marginBottom": "11PT",
        }
      }
    >
      <span
        className=""
      >
        <span
          className=""
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vitae leo nec massa semper venenatis eu at felis. Nam consequat accumsan dictum. Suspendisse eu metus in justo eleifend consequat id quis nunc. Etiam pharetra, tortor id malesuada efficitur, ligula sem posuere erat, vitae placerat ipsum felis non leo. Praesent lobortis, mauris vel posuere bibendum, leo diam vehicula lacus, a interdum odio massa et elit. Suspendisse ac lorem imperdiet, suscipit quam eu, maximus elit. Quisque nec metus eu nibh iaculis dignissim. Cras ultricies pulvinar erat eget luctus. In id ipsum non diam sagittis ullamcorper eget nec arcu. Ut laoreet accumsan ex non porta. Donec vitae mi porttitor, dictum lacus sit amet, dapibus ipsum. Praesent bibendum lacus nibh, sed egestas enim facilisis vitae!
        </span>
      </span>
      <span
        className="pantheon-img-container pantheon-img-container-breakright"
        style={
          {
            "float": "right",
            "height": "auto",
            "marginTop": "170.85929748535153px",
            "maxHeight": "352.00px",
            "maxWidth": "480.00px",
            "shapeOutside": "padding-box",
            "width": "100%",
          }
        }
      >
        <img
          className=""
          src="https://cdn.example.com/loAWY0YB0HTHexSzw3Z1/djHVTYbPaCby44H5CxhH"
          style={
            {
              "height": "auto",
              "marginLeft": "0.00px",
              "maxHeight": "352.00px",
              "maxWidth": "480.00px",
              "width": "100%",
            }
          }
          title="just another dog"
        />
        <span
          className="pantheon-caption"
          style={
            {
              "display": "flex",
              "fontSize": ".75rem",
              "justifyContent": "center",
              "width": "100%",
            }
          }
        >
          just another dog
        </span>
      </span>
    </p>
  </div>
  <div>
    <style
      dangerouslySetInnerHTML={
        {
          "__html": "

ul.nesting-level-1 {
  list-style-type: disc; 
}
ul.nesting-level-2 {
  list-style-type: circle; 
}
ul.nesting-level-3 {
  list-style-type: square; 
}
ul.nesting-level-4 {
  list-style-type: disc; 
}
ul.nesting-level-5 {
  list-style-type: circle; 
}
ul.nesting-level-6 {
  list-style-type: square; 
}
ul.nesting-level-7 {
  list-style-type: disc; 
}
ul.nesting-level-8 {
  list-style-type: circle; 
}


ol[list-style-type="decimal"] {
  list-style-type: decimal;
}
ol[list-style-type="lower-alpha"] {
  list-style-type: lower-alpha;
}
ol[list-style-type="lower-roman"] { 
  list-style-type: lower-roman;
}

",
        }
      }
    />
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
          "marginBottom": "11PT",
        }
      }
    >
      <span
        className=""
      >
        <span
          className=""
        >
          Integer pretium bibendum ipsum, vehicula placerat orci finibus id. Proin orci mauris, ornare commodo congue sit amet, dignissim non eros. Nullam risus nibh, dictum et enim vel, vestibulum maximus velit. Proin eu porta risus. Aliquam nec lacus et lacus commodo elementum. Mauris quis massa ac urna iaculis hendrerit. Nulla eget ullamcorper lorem, in rutrum sapien. Vivamus finibus placerat massa a mollis.
        </span>
      </span>
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
          "marginBottom": "11PT",
        }
      }
    >
      <span
        className=""
      >
        <span
          className=""
        >
          Cras vitae ultricies odio. Vestibulum iaculis interdum feugiat. Donec iaculis finibus lorem. Quisque lacinia volutpat magna, in dapibus lectus gravida id. Cras iaculis justo et diam elementum, nec rhoncus dolor efficitur. Sed lacus libero, lobortis in mauris ut, imperdiet suscipit quam. Sed eu leo vitae sapien vestibulum viverra.
        </span>
      </span>
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
          "marginBottom": "11PT",
        }
      }
    >
      <span
        className=""
      >
        <span
          className=""
        >
          Morbi varius, velit volutpat auctor malesuada, nisi mi rhoncus urna, at tempus risus libero ac turpis. Nullam sit amet porta leo. Nam dapibus maximus ante, vitae fringilla ipsum lacinia posuere. Donec efficitur, odio ac blandit convallis, purus arcu posuere risus, maximus scelerisque quam augue id ante. Etiam ultrices neque in purus rhoncus laoreet. Nunc bibendum tincidunt felis, quis molestie libero dictum scelerisque. Sed urna dolor, elementum eget auctor tincidunt, lacinia in diam. Duis a libero tristique, luctus lacus aliquet, fermentum odio. Integer lacinia nunc metus, ac egestas nibh mattis a. Fusce sodales mollis odio non pulvinar. Nulla vitae dignissim nibh, ac finibus neque.
        </span>
      </span>
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
          "marginBottom": "11PT",
        }
      }
    >
      <span
        className=""
      >
        <span
          className=""
        >
          Mauris mollis, lacus eu sodales tincidunt, ipsum ex pharetra libero, eu posuere ante lectus nec velit. Sed commodo ultrices diam eget pulvinar. Vestibulum volutpat sapien non nisl porttitor, sed euismod magna sollicitudin. Suspendisse potenti. Sed posuere sapien id magna euismod tincidunt. Phasellus in cursus diam, eget vestibulum ipsum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur tempus mollis tempus. Phasellus rhoncus, turpis sed mollis rutrum, tellus mauris hendrerit nulla, a congue dolor mauris in leo. Sed feugiat posuere neque, eget cursus est luctus at. Vestibulum accumsan convallis ante in auctor. Aliquam ac orci sem. Nunc auctor mauris sed felis tristique, nec malesuada ante porta.
        </span>
      </span>
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
          "marginBottom": "11PT",
        }
      }
    >
      <span
        className=""
      >
        <span
          className=""
        >
          Sed et ligula nec nisl convallis volutpat. Curabitur semper massa ac mollis feugiat. Vestibulum eget orci ac arcu tempus dapibus. Nunc augue lorem, ultrices in velit non, porta cursus ex. Aenean eget nunc sit amet quam vulputate porttitor vitae sed ex. Morbi porttitor libero nec hendrerit vehicula. Ut maximus odio ac odio blandit pharetra. Etiam quis condimentum est. Morbi dui nisi, ornare at dignissim vel, ultrices rhoncus nisl. Sed at euismod enim. Quisque efficitur orci a velit pretium scelerisque. Nulla eleifend feugiat porta. Etiam eu rhoncus lectus.
        </span>
      </span>
      <span
        className="pantheon-img-container pantheon-img-container-breakleft"
        style={
          {
            "float": "left",
            "height": "auto",
            "marginTop": "24.937500000000085px",
            "maxHeight": "350.00px",
            "maxWidth": "470.00px",
            "shapeOutside": "padding-box",
            "width": "100%",
          }
        }
      >
        <img
          className=""
          src="https://cdn.example.com/loAWY0YB0HTHexSzw3Z1/ZWJn6ilXOYs9oS9iDgMH"
          style={
            {
              "height": "auto",
              "marginLeft": "0.00px",
              "maxHeight": "350.00px",
              "maxWidth": "470.00px",
              "width": "100%",
            }
          }
          title="This is a title"
        />
        <span
          className="pantheon-caption"
          style={
            {
              "display": "flex",
              "fontSize": ".75rem",
              "justifyContent": "center",
              "width": "100%",
            }
          }
        >
          This is a title
        </span>
      </span>
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
          "marginBottom": "11PT",
        }
      }
    >
      <span
        className=""
      >
        <span
          className=""
        >
          THIS PUPPY BREAKS UP TEXT Etiam maximus mauris eu felis interdum, in bibendum orci sodales. In posuere elit quam. Nulla dictum, sapien ut sagittis consequat, nisl elit suscipit lectus, a blandit risus nunc eget nunc. Donec augue ante, eleifend non risus at, dignissim gravida ipsum. Vivamus tristique tempor dui, at condimentum dui tristique nec. Suspendisse potenti. Nulla facilisi. Quisque orci risus, iaculis vel vehicula eu, cursus sit amet justo. Cras sed erat a est tristique elementum.
        </span>
      </span>
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
          "marginBottom": "11PT",
        }
      }
    >
      <span
        className=""
      >
        <span
          className=""
        >
          Morbi justo lorem, ultricies ut volutpat aliquam, blandit eu erat. Duis accumsan egestas convallis. Morbi a finibus lectus. Vivamus vel ultrices felis. Donec faucibus placerat mi, non pellentesque est lacinia non. Ut vitae metus leo. Mauris volutpat malesuada lorem, et auctor metus sodales ultrices. Nulla rhoncus augue pulvinar consectetur bibendum. Nunc ac urna vel mauris venenatis euismod in et massa.
        </span>
      </span>
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
          "marginBottom": "11PT",
        }
      }
    >
      <span
        className=""
      >
        <span
          className=""
        >
          Proin sed laoreet augue. Aliquam malesuada vel ex ut vestibulum. Mauris at libero vestibulum, vehicula mi nec, ullamcorper magna. Vivamus bibendum ipsum imperdiet placerat pharetra. Curabitur fermentum id est a tristique. Integer at semper erat. Phasellus volutpat dolor in ipsum hendrerit, eu maximus libero mattis. Nunc aliquam, tortor at congue vehicula, mi purus mollis metus, et convallis orci quam at elit.
        </span>
      </span>
      <span
        className="pantheon-img-container pantheon-img-container-breakright"
        style={
          {
            "float": "right",
            "height": "auto",
            "marginTop": "64.63423339843754px",
            "maxHeight": "352.00px",
            "maxWidth": "462.00px",
            "shapeOutside": "padding-box",
            "width": "100%",
          }
        }
      >
        <img
          className=""
          src="https://cdn.example.com/loAWY0YB0HTHexSzw3Z1/RoJOqZdOWPaxWCVnH9sD"
          style={
            {
              "height": "auto",
              "marginLeft": "0.00px",
              "maxHeight": "352.00px",
              "maxWidth": "462.00px",
              "width": "100%",
            }
          }
        />
      </span>
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
          "marginBottom": "11PT",
        }
      }
    >
      <span
        className=""
      >
        <span
          className=""
        >
          Etiam non eleifend nisl. Morbi eu libero a erat volutpat dictum eu sodales urna. Ut venenatis rutrum dolor, a euismod nibh egestas a. Nullam pretium congue tellus, eu tempor est consectetur et. Etiam dapibus consequat volutpat. Nunc sed bibendum ipsum, a egestas risus. Nulla id dolor nibh. Nulla tempor diam eget sapien elementum faucibus. Sed elementum, mi ut maximus facilisis, ex enim fringilla sem, at fermentum odio mi id diam. Pellentesque vitae commodo felis. Vestibulum eget diam pellentesque, porttitor ante a, ultricies lacus.
        </span>
      </span>
      <span
        className="pantheon-img-container pantheon-img-container-inline pantheon-img-container-alone"
        style={
          {
            "border": "0.00px solid #000000",
            "display": "inline-block",
            "height": "auto",
            "margin": "0.00px 0.00px",
            "maxHeight": "193.99px",
            "maxWidth": "256.50px",
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        <img
          className=""
          src="https://cdn.example.com/loAWY0YB0HTHexSzw3Z1/RoJOqZdOWPaxWCVnH9sD"
          style={
            {
              "height": "auto",
              "marginLeft": "0.00px",
              "maxHeight": "193.99px",
              "maxWidth": "256.50px",
              "width": "100%",
            }
          }
        />
      </span>
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <span
        className="pantheon-img-container pantheon-img-container-inline pantheon-img-container-alone"
        style={
          {
            "height": "auto",
            "maxHeight": "90.22325805664047px",
            "maxWidth": "118.41802619934062px",
            "width": "100%",
          }
        }
      >
        <img
          className=""
          src="https://cdn.example.com/loAWY0YB0HTHexSzw3Z1/RoJOqZdOWPaxWCVnH9sD"
          style={
            {
              "height": "auto",
              "marginLeft": "0.00px",
              "maxHeight": "90.45px",
              "maxWidth": "118.71px",
              "width": "100%",
            }
          }
        />
      </span>
    </p>
    <p
      className="normal-text"
      style={
        {
          "margin": "0",
        }
      }
    >
      <span
        className="pantheon-img-container pantheon-img-container-inline pantheon-img-container-alone"
        style={
          {
            "height": "auto",
            "maxHeight": "57.30575805664048px",
            "maxWidth": "75.77094676378019px",
            "width": "100%",
          }
        }
      >
        <img
          className=""
          src="https://cdn.example.com/loAWY0YB0HTHexSzw3Z1/RoJOqZdOWPaxWCVnH9sD"
          style={
            {
              "height": "auto",
              "marginLeft": "0.00px",
              "maxHeight": "57.45px",
              "maxWidth": "75.96px",
              "width": "100%",
            }
          }
          title="inline puppies"
        />
        <span
          className="pantheon-caption"
          style={
            {
              "display": "flex",
              "fontSize": ".75rem",
              "justifyContent": "center",
              "width": "100%",
            }
          }
        >
          inline puppies
        </span>
      </span>
    </p>
  </div>
</div>
`;
